Creato con Colaboratory

--- a/TrainingsetBuilding.ipynb
+++ b/TrainingsetBuilding.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1BzpcGrJo5KEi1dp3lhn3r2sU6vT9lZ1C",
-      "authorship_tag": "ABX9TyMwRxsYHrzXs5Oa8s/1FJvS",
+      "authorship_tag": "ABX9TyPbC38LG5CLkaKn7/1/UgBA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 12,
       "metadata": {
         "id": "ILnna4AczTPV"
       },
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "\n",
         "\n",
         "reviews = pd.read_csv('/content/drive/MyDrive/DataMining/Dataset/reviews_podcast_2020.csv')"
       ]
@@ -51,9 +50,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4b2a0af9-c9ea-4667-dd19-454ceaa75adc"
+        "outputId": "4295e0d1-378a-4063-8086-53300385f465"
       },
-      "execution_count": 2,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,7 +71,7 @@
       "metadata": {
         "id": "9CXaMCpI2SwH"
       },
-      "execution_count": 3,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -98,20 +97,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7O2tHWop2AMm",
-        "outputId": "b9d239b8-c7f1-4630-8c13-4a8da51cbc18"
+        "outputId": "dc739375-cfa4-41b2-843a-d10beeb7b0ec"
       },
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                         content    rating\n",
-            "0                     Take me on  positive\n",
-            "1         Show off the quads Pft  positive\n",
-            "2              Best fill in EVER  positive\n",
-            "3           I needed this today.  positive\n",
-            "4  I need so much more of this 😴  positive\n"
+            "                       content    rating\n",
+            "0                   take me on  positive\n",
+            "1       show off the quads pft  positive\n",
+            "2            best fill in ever  positive\n",
+            "3          i needed this today  positive\n",
+            "4  i need so much more of this  positive\n"
           ]
         }
       ]
@@ -142,39 +141,39 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wy3OJba92tnt",
-        "outputId": "01fce014-14e5-4bc3-c233-fd66a73b24be"
+        "outputId": "7fa6f4ed-f260-40c6-f1b2-db05cb5979d8"
       },
-      "execution_count": 5,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "DataFrame Positive:\n",
-            "                         content    rating\n",
-            "0                     Take me on  positive\n",
-            "1         Show off the quads Pft  positive\n",
-            "2              Best fill in EVER  positive\n",
-            "3           I needed this today.  positive\n",
-            "4  I need so much more of this 😴  positive\n",
+            "                       content    rating\n",
+            "0                   take me on  positive\n",
+            "1       show off the quads pft  positive\n",
+            "2            best fill in ever  positive\n",
+            "3          i needed this today  positive\n",
+            "4  i need so much more of this  positive\n",
             "1007776\n",
             "\n",
             "DataFrame Neutral:\n",
             "                                               content   rating\n",
-            "87   I am only on episode 24. Until now, I binged a...  neutral\n",
-            "117  If it wasn’t for Brit. I would give you a 5sta...  neutral\n",
-            "132  Great story telling by Dr Phill but the music ...  neutral\n",
-            "155  Kara is a self centered narcissistic who think...  neutral\n",
-            "166  Do several podcasts in a couple days to stock ...  neutral\n",
+            "87   i am only on episode until now i binged and lo...  neutral\n",
+            "117  if it wasnt for brit i would give you a star r...  neutral\n",
+            "132  great story telling by dr phill but the music ...  neutral\n",
+            "155  kara is a self centered narcissistic who think...  neutral\n",
+            "166  do several podcasts in a couple days to stock ...  neutral\n",
             "26412\n",
             "\n",
             "DataFrame Negative:\n",
             "                                              content    rating\n",
-            "11                As you can tell, I did not like it.  negative\n",
-            "15  Look elsewhere for thoughtful and unbiased NFL...  negative\n",
-            "18   Without Chris Carter the show isn’t good anymore  negative\n",
-            "27  I’ve tried a few different times but can’t get...  negative\n",
-            "29  2 hours 37 minutes ... 20 minutes of which was...  negative\n",
+            "11                  as you can tell i did not like it  negative\n",
+            "15  look elsewhere for thoughtful and unbiased nfl...  negative\n",
+            "18    without chris carter the show isnt good anymore  negative\n",
+            "27  ive tried a few different times but cant get p...  negative\n",
+            "29  hours minutes minutes of which was spent on th...  negative\n",
             "93468\n"
           ]
         }
@@ -201,20 +200,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aWYTCFlR0ygS",
-        "outputId": "94e5006f-34b8-40b6-d923-2241e1fbe8bc"
+        "outputId": "9c752fb4-d641-4a87-f800-3005f6704c2d"
       },
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "                                                   content    rating\n",
-            "1098009  It was great to hear the background & history ...  positive\n",
-            "262259               Thanks for making me laugh every day!  positive\n",
-            "1097272  My wife and I are KC Symphony Masterworks subs...  positive\n",
-            "919722   I really enjoy the dynamic between Jared and G...  positive\n",
-            "1014179  so glad I came across this podcast. These 2 br...  positive\n"
+            "1098009  it was great to hear the background history of...  positive\n",
+            "262259                thanks for making me laugh every day  positive\n",
+            "1097272  my wife and i are kc symphony masterworks subs...  positive\n",
+            "919722   i really enjoy the dynamic between jared and g...  positive\n",
+            "1014179  so glad i came across this podcast these broth...  positive\n"
           ]
         }
       ]
@@ -239,9 +238,9 @@
           "height": 472
         },
         "id": "9MgHJx4T4dC6",
-        "outputId": "9547e4e9-9e6d-452e-ca06-56d7b28ce29a"
+        "outputId": "d6cf7799-63d4-4947-c142-e99206197eeb"
       },
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -263,7 +262,7 @@
       "metadata": {
         "id": "lyC4cwFm6QQX"
       },
-      "execution_count": 11,
+      "execution_count": 20,
       "outputs": []
     }
   ]
