Creato con Colaboratory

--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/LudovicaCi/SentimentAnalysis/blob/main/DataPreprocessing.ipynb",
-      "authorship_tag": "ABX9TyObCS7YxWukXQanf9CcI3KP",
+      "authorship_tag": "ABX9TyPykggAUKBhI+IRTjiXZTYZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "oF4OwblQEr-C"
       },
-      "execution_count": 22,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -60,9 +60,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vGGXDDqdHiHO",
-        "outputId": "0fa0a61e-472b-41be-f559-87df388933e4"
+        "outputId": "d2efa088-59a4-40d1-e156-1e2f4cd1910d"
       },
-      "execution_count": 23,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,9 +83,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cwbd9aYym16y",
-        "outputId": "0dd949e5-1b1b-4cab-9882-22b0d53d2e97"
+        "outputId": "0dbbba10-0e9c-4e5e-c693-626f5315c630"
       },
-      "execution_count": 24,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,9 +132,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JbBEpmmwEyY6",
-        "outputId": "e1df9dda-9ac5-4f46-ac9d-4d25c710021e"
+        "outputId": "e307849f-64f1-4972-f5e7-cc804608f5c2"
       },
-      "execution_count": 25,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +175,7 @@
       "metadata": {
         "id": "gQdGwmDd9Vdi"
       },
-      "execution_count": 26,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -188,9 +188,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KRpr3thg9337",
-        "outputId": "63c5ab03-99a0-4b36-f870-1c8987c105fd"
+        "outputId": "551b4a60-469c-4e48-9347-bcf16d6cb549"
       },
-      "execution_count": 27,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,9 +215,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o338tEpL_FK5",
-        "outputId": "d6930676-29f2-4395-b113-af70d2ddb4c1"
+        "outputId": "0192b0ac-5769-40da-bb54-30ebe840d39e"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +288,7 @@
       "metadata": {
         "id": "pGtPrGAz_y3G"
       },
-      "execution_count": 28,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -301,9 +301,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rGHKbfbf_b5F",
-        "outputId": "9a09ee86-c642-4b93-cdb8-7dfd81349823"
+        "outputId": "1c5d27e1-c6e0-4102-845f-cef68f5245e8"
       },
-      "execution_count": 29,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,9 +325,9 @@
           "height": 466
         },
         "id": "Hnk1oVDlDyvP",
-        "outputId": "d49567e1-3d9c-4e63-c2f2-768f18f019e2"
+        "outputId": "e717fdf1-7b14-4147-ebfd-eb6c3a75aae0"
       },
-      "execution_count": 30,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +363,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-909664ca-1436-4c79-beeb-d7492494209f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a510eef4-39fd-48ae-aee4-d63c6b1a9339\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -442,7 +442,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-909664ca-1436-4c79-beeb-d7492494209f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a510eef4-39fd-48ae-aee4-d63c6b1a9339')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -494,12 +494,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-909664ca-1436-4c79-beeb-d7492494209f button.colab-df-convert');\n",
+              "        document.querySelector('#df-a510eef4-39fd-48ae-aee4-d63c6b1a9339 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-909664ca-1436-4c79-beeb-d7492494209f');\n",
+              "        const element = document.querySelector('#df-a510eef4-39fd-48ae-aee4-d63c6b1a9339');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -519,8 +519,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e96277ee-c776-426d-8819-a9abd0783a3d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e96277ee-c776-426d-8819-a9abd0783a3d')\"\n",
+              "<div id=\"df-5300b3be-702b-4506-9e97-ff2000ca0278\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5300b3be-702b-4506-9e97-ff2000ca0278')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -639,7 +639,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e96277ee-c776-426d-8819-a9abd0783a3d button');\n",
+              "        document.querySelector('#df-5300b3be-702b-4506-9e97-ff2000ca0278 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -650,7 +650,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 10
         }
       ]
     },
@@ -692,7 +692,7 @@
       "metadata": {
         "id": "zA4Uq2xrQJvz"
       },
-      "execution_count": 31,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -704,7 +704,7 @@
       "metadata": {
         "id": "PSk1IcsYQfKZ"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -727,7 +727,7 @@
       "metadata": {
         "id": "JgzDmjN_B6bl"
       },
-      "execution_count": 47,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -740,9 +740,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wm-E3bhlCjwn",
-        "outputId": "c84492c6-78d2-4a7d-f298-339e53e26c50"
+        "outputId": "ea1f44d7-642b-452d-fe43-01fc86e7a6dc"
       },
-      "execution_count": 48,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,9 +763,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ga0azlZ8CoJA",
-        "outputId": "1ea54532-8e47-4bbf-968b-fb3be7fd9227"
+        "outputId": "7a553c3a-e281-4980-8c5c-576375944f65"
       },
-      "execution_count": 41,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -808,21 +808,21 @@
           "height": 700
         },
         "id": "ezmBArphtZhA",
-        "outputId": "a588b903-6a7f-4736-e03e-11f93df79889"
+        "outputId": "a5e785e9-ee45-430f-be65-b8b992b2b656"
       },
-      "execution_count": 42,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-42-1aa2da892cfd>:4: SettingWithCopyWarning: \n",
+            "<ipython-input-16-1aa2da892cfd>:4: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  reviews['created_at'] = pd.to_datetime(reviews['created_at'])\n",
-            "<ipython-input-42-1aa2da892cfd>:7: SettingWithCopyWarning: \n",
+            "<ipython-input-16-1aa2da892cfd>:7: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -862,7 +862,7 @@
       "metadata": {
         "id": "NoY9Mj2nvAoB"
       },
-      "execution_count": 44,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -875,9 +875,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qjiAfz0vvNKH",
-        "outputId": "7d20ff1a-e65c-42d4-d04c-783f814bf58b"
+        "outputId": "c5f9186e-b86e-486d-bed7-29a24e5833ac"
       },
-      "execution_count": 45,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,14 +891,43 @@
     {
       "cell_type": "code",
       "source": [
-        "# Sostituisci 'df_anno_2020.csv' con il percorso e il nome del file desiderato\n",
-        "reviews_2020.to_csv('/content/drive/MyDrive/DataMining/Dataset/reviews_podcast_2020.csv', index=False)"
+        "reviews_2020.to_csv('/content/drive/MyDrive/DataMining/Dataset/reviews_podcast_2020.csv', sep=',', index=False)"
       ],
       "metadata": {
         "id": "qpy3cgjOx-WQ"
       },
-      "execution_count": 46,
+      "execution_count": 23,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Conta le righe con valori NaN negli attributi 'content' e 'rating'\n",
+        "nan_rows_content = reviews[reviews['content'].isna()]\n",
+        "nan_rows_rating = reviews[reviews['rating'].isna()]\n",
+        "\n",
+        "# Stampa il numero di righe con NaN in 'content' e 'rating'\n",
+        "print(f\"Numero di righe con NaN in 'content': {len(nan_rows_content)}\")\n",
+        "print(f\"Numero di righe con NaN in 'rating': {len(nan_rows_rating)}\")"
+      ],
+      "metadata": {
+        "id": "W3WxURJi8HY9",
+        "outputId": "134a4efb-b5d5-48cf-cf19-7a027ed78160",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Numero di righe con NaN in 'content': 0\n",
+            "Numero di righe con NaN in 'rating': 0\n"
+          ]
+        }
+      ]
     }
   ]
 }
